# fnblur

./: .clangd  .gitignore  README.md  fast_blur.cpp  pyproject.toml  setup.py
app-silicon-resize/: fast_blur.cpp
benchmarks/: benchmark.py  full_benchmark.py
docs/: architecture.md
src/fnblur/: __init__.py  __init__.pyi  fast_blur.cpp
tests/: test_all.py  test_basic.py
